GNOME Bugzilla – Bug 622992
Does not use correct directories under OS X
Last modified: 2010-06-28 09:09:33 UTC
Noticed while looking at the code that libpeas will use incorrect directories under OS X.
Created attachment 164775 [details] [review] Use correct directories under OS X
It'd be nice if jessevdk and nacho could review this one...
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.