Use correct directories under OS X

https://bugzilla.gnome.org/show_bug.cgi?id=622992